@@ -1,5 +1,12 @@
 2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Chainloading on coreboot support.
+
+	* grub-core/Makefile.core.def (chain): Add coreboot.
+	* grub-core/loader/i386/coreboot/chainloader.c: New file.
+
+2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/loader/i386/bsd.c (grub_bsd_load): Handle relocator failure
 	if it happens.
 
